# distributedhardware_distributed_input

./: CODEOWNERS  README_zh.md  bundle.json  distributedinput.gni
common/include/test/whitelistunittest/: BUILD.gn  white_list_test.cpp  white_list_test.h
dfx_utils/: BUILD.gn
dfx_utils/test/dfxtest/: BUILD.gn
inputdevicehandler/test/inputhandlertest/: BUILD.gn  distributed_input_handler_test.cpp
interfaces/inner_kits/: BUILD.gn
interfaces/inner_kits/include/: distributed_input_kit.h
interfaces/inner_kits/src/: distributed_input_kit.cpp
interfaces/inner_kits/test/unittest/: BUILD.gn  distributed_input_inner_test.cpp  distributed_input_inner_test.h
interfaces/inner_kits/test/unittest/mock/: mock_distributed_input_client.cpp
interfaces/ipc/test/dinputsourcecallbackunittest/: BUILD.gn  dinput_source_callback_unittest.cpp  dinput_source_callback_unittest.h
interfaces/ipc/test/fuzztest/distributedinputstub_fuzzer/: BUILD.gn  distributedinputstub_fuzzer.cpp  distributedinputstub_fuzzer.h
interfaces/ipc/test/ipcunittest/: BUILD.gn  distributed_input_ipc_test.cpp  distributed_input_ipc_test.h
interfaces/ipc/test/unregisterdinputcallbackunittest/: BUILD.gn  unregister_d_input_call_back_test.cpp  unregister_d_input_call_back_test.h
services/sink/inputcollector/: BUILD.gn
services/sink/inputcollector/include/: distributed_input_collector.h
services/sink/inputcollector/src/: distributed_input_collector.cpp
services/sink/inputcollector/test/: BUILD.gn
services/sink/inputcollector/test/sinkcollectorunittest/: BUILD.gn  distributed_input_collector_test.cpp  distributed_input_collector_test.h
services/sink/sinkmanager/: BUILD.gn
services/sink/sinkmanager/include/: distributed_input_sink_manager.h
services/sink/sinkmanager/src/: distributed_input_sink_manager.cpp
services/sink/sinkmanager/test/sinkmanagerunittest/: BUILD.gn  distributed_input_sinkmanager_test.cpp  distributed_input_sinkmanager_test.h
services/sink/transport/test/sinktransunittest/: BUILD.gn  distributed_input_sinktrans_test.cpp  distributed_input_sinktrans_test.h
services/source/inputinject/test/sourceinjectunittest/: BUILD.gn  distributed_input_sourceinject_test.cpp  distributed_input_sourceinject_test.h
services/source/sourcemanager/: BUILD.gn
services/source/sourcemanager/include/: dinput_source_listener.h  dinput_source_manager_event_handler.h  distributed_input_source_manager.h  distributed_input_source_sa_cli_mgr.h
services/source/sourcemanager/src/: dinput_source_listener.cpp  dinput_source_manager_event_handler.cpp  distributed_input_source_manager.cpp  distributed_input_source_sa_cli_mgr.cpp
services/source/transport/: BUILD.gn
services/source/transport/include/: distributed_input_source_transport.h
services/source/transport/src/: distributed_input_source_transport.cpp
services/state/: BUILD.gn
services/state/include/: dinput_sink_state.h  dinput_state.h  touchpad_event_fragment.h  touchpad_event_fragment_mgr.h
services/state/src/: dinput_sink_state.cpp  dinput_state.cpp  touchpad_event_fragment.cpp  touchpad_event_fragment_mgr.cpp
services/state/test/: BUILD.gn
services/state/test/dinpusinkstatetest/: BUILD.gn  dinput_sink_state_test.cpp
services/transportbase/: BUILD.gn
services/transportbase/include/: distributed_input_transport_base.h  softbus_permission_check.h
services/transportbase/src/: distributed_input_transport_base.cpp  softbus_permission_check.cpp
services/transportbase/test/transbaseunittest/: BUILD.gn  device_manager_impl_mock.h  distributed_input_transbase_test.cpp  distributed_input_transbase_test.h  mock_other_method.h  socket_mock.h  softbus_permission_check_test.cpp
sinkhandler/: BUILD.gn
sinkhandler/include/: distributed_input_sink_handler.h
sinkhandler/src/: distributed_input_sink_handler.cpp  load_d_input_sink_callback.cpp
sinkhandler/test/unittest/: BUILD.gn  distributed_input_sinkhandler_test.cpp  distributed_input_sinkhandler_test.h
sinkhandler/test/unittest/mock/: mock_distributed_input_client.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/dinputconfigdh_fuzzer/: BUILD.gn  dinputconfigdh_fuzzer.cpp  dinputconfigdh_fuzzer.h
test/fuzztest/dinputinitsink_fuzzer/: BUILD.gn  dinputinitsink_fuzzer.cpp  dinputinitsink_fuzzer.h
test/fuzztest/dinputinitsource_fuzzer/: BUILD.gn  dinputinitsource_fuzzer.cpp  dinputinitsource_fuzzer.h
test/fuzztest/dinputonsessionclosed_fuzzer/: BUILD.gn  dinputonsessionclosed_fuzzer.cpp  dinputonsessionclosed_fuzzer.h
test/fuzztest/dinputonsessionopend_fuzzer/: BUILD.gn  dinputonsessionopend_fuzzer.cpp  dinputonsessionopend_fuzzer.h
test/fuzztest/dinputpermissioncheck_fuzzer/: BUILD.gn  dinput_permission_check_fuzzer.cpp  dinput_permission_check_fuzzer.h
test/fuzztest/dinputreleasesink_fuzzer/: BUILD.gn  dinputreleasesink_fuzzer.cpp  dinputreleasesink_fuzzer.h
test/fuzztest/dinputreleasesource_fuzzer/: BUILD.gn  dinputreleasesource_fuzzer.cpp  dinputreleasesource_fuzzer.h
test/fuzztest/dinputsinkhandler_fuzzer/: BUILD.gn  dinput_sink_handler_fuzzer.cpp  dinput_sink_handler_fuzzer.h
test/fuzztest/dinputsourcehandler_fuzzer/: BUILD.gn  dinput_source_handler_fuzzer.cpp  dinput_source_handler_fuzzer.h
test/fuzztest/dinputsubscribelocaldh_fuzzer/: BUILD.gn  dinputsubscribelocaldh_fuzzer.cpp  dinputsubscribelocaldh_fuzzer.h
test/fuzztest/distributedinputclient_fuzzer/: BUILD.gn  distributed_input_client_fuzzer.cpp
test/fuzztest/distributedinputkit_fuzzer/: BUILD.gn  distributed_input_kit_fuzzer.cpp
test/fuzztest/distributedinputsinktransport_fuzzer/: BUILD.gn  distributed_input_sink_transport_fuzzer.cpp
test/fuzztest/distributedinputsourcetransport_fuzzer/: BUILD.gn  distributed_input_source_transport_fuzzer.cpp
test/fuzztest/distributedinputtransportbase_fuzzer/: BUILD.gn  distributed_input_transport_base_fuzzer.cpp
utils/: BUILD.gn
utils/include/: dinput_context.h  dinput_log.h  dinput_utils_tool.h
utils/src/: dinput_context.cpp  dinput_log.cpp  dinput_utils_tool.cpp
utils/test/unittest/: BUILD.gn  dinput_context_test.cpp  dinput_context_test.h
(+153 files in other folders)
