# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedinput_path = "//foundation/distributedhardware/distributed_input"

distributedhardwarefwk_path =
    "//foundation/distributedhardware/distributed_hardware_fwk"

common_path = "${distributedinput_path}/common"

utils_path = "${distributedinput_path}/utils"

dfx_utils_path = "${distributedinput_path}/dfx_utils"

fuzz_test_path = "distributed_input/distributed_input"

services_source_path = "${distributedinput_path}/services/source"

services_sink_path = "${distributedinput_path}/services/sink"

services_state_path = "${distributedinput_path}/services/state"

innerkits_path = "${distributedinput_path}/interfaces/inner_kits"

ipc_path = "${distributedinput_path}/interfaces/ipc"

frameworks_path = "${distributedinput_path}/frameworks"

service_common = "${distributedinput_path}/services/common"

fwk_common_path = "${distributedhardwarefwk_path}/common"

fwk_interfaces_path = "${distributedhardwarefwk_path}/interfaces/inner_kits"

av_transport_path = "${distributedhardwarefwk_path}/av_transport"

distributedinput_ldflags = [ "-lpthread" ]
