# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_utils") {
  include_dirs = [
    "${fwk_common_path}/utils/include",
    "${fwk_common_path}/log/include",
    "${fwk_utils_path}/include",
    "${fwk_utils_path}/include/log",
    "//third_party/json/include",
    "${utils_path}/include",
    "${common_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${dfx_utils_path}/include",
    "${frameworks_path}/include",
  ]

  sources = [
    "src/dinput_context.cpp",
    "src/dinput_log.cpp",
    "src/dinput_utils_tool.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dinpututils\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "//third_party/openssl:libcrypto_static",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
