# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../distributedinput.gni")

config("input_sdk_public_config") {
  include_dirs = [
    "${av_transport_path}/common/include",
    "${common_path}/include",
    "${frameworks_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "${utils_path}/include",
    "//third_party/json/include",
  ]
}
ohos_shared_library("libdinput_sdk") {
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true
  public_configs = [ ":input_sdk_public_config" ]

  sources = [
    "${common_path}/include/input_check_param.cpp",
    "${common_path}/include/white_list_util.cpp",
    "${innerkits_path}/src/distributed_input_kit.cpp",
    "${ipc_path}/src/add_white_list_infos_call_back_proxy.cpp",
    "${ipc_path}/src/add_white_list_infos_call_back_stub.cpp",
    "${ipc_path}/src/del_white_list_infos_call_back_proxy.cpp",
    "${ipc_path}/src/del_white_list_infos_call_back_stub.cpp",
    "${ipc_path}/src/dinput_sa_manager.cpp",
    "${ipc_path}/src/distributed_input_client.cpp",
    "${ipc_path}/src/distributed_input_sink_proxy.cpp",
    "${ipc_path}/src/distributed_input_sink_stub.cpp",
    "${ipc_path}/src/distributed_input_source_proxy.cpp",
    "${ipc_path}/src/distributed_input_source_stub.cpp",
    "${ipc_path}/src/get_sink_screen_infos_call_back_proxy.cpp",
    "${ipc_path}/src/get_sink_screen_infos_call_back_stub.cpp",
    "${ipc_path}/src/input_node_listener_proxy.cpp",
    "${ipc_path}/src/input_node_listener_stub.cpp",
    "${ipc_path}/src/prepare_d_input_call_back_proxy.cpp",
    "${ipc_path}/src/prepare_d_input_call_back_stub.cpp",
    "${ipc_path}/src/register_d_input_call_back_proxy.cpp",
    "${ipc_path}/src/register_d_input_call_back_stub.cpp",
    "${ipc_path}/src/register_session_state_callback_proxy.cpp",
    "${ipc_path}/src/register_session_state_callback_stub.cpp",
    "${ipc_path}/src/sharing_dhid_listener_proxy.cpp",
    "${ipc_path}/src/sharing_dhid_listener_stub.cpp",
    "${ipc_path}/src/simulation_event_listener_proxy.cpp",
    "${ipc_path}/src/simulation_event_listener_stub.cpp",
    "${ipc_path}/src/start_d_input_call_back_proxy.cpp",
    "${ipc_path}/src/start_d_input_call_back_stub.cpp",
    "${ipc_path}/src/start_stop_d_inputs_call_back_proxy.cpp",
    "${ipc_path}/src/start_stop_d_inputs_call_back_stub.cpp",
    "${ipc_path}/src/start_stop_result_call_back_proxy.cpp",
    "${ipc_path}/src/start_stop_result_call_back_stub.cpp",
    "${ipc_path}/src/stop_d_input_call_back_proxy.cpp",
    "${ipc_path}/src/stop_d_input_call_back_stub.cpp",
    "${ipc_path}/src/unprepare_d_input_call_back_proxy.cpp",
    "${ipc_path}/src/unprepare_d_input_call_back_stub.cpp",
    "${ipc_path}/src/unregister_d_input_call_back_proxy.cpp",
    "${ipc_path}/src/unregister_d_input_call_back_stub.cpp",
  ]

  deps = [
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputclient\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
