# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_state") {
  include_dirs = [
    "include",
    "${common_path}/include",
    "${utils_path}/include",
    "${services_sink_path}/inputcollector/include",
    "${services_source_path}/inputdevicehandler/include",
    "${services_sink_path}/inputcollector/include",
    "${frameworks_path}/include",
    "${fWK_common_path}/utils/include",
  ]

  sources = [ "src/dinput_state.cpp" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputstate\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${services_source_path}/inputinject:libdinput_inject",
    "${services_sink_path}/inputcollector:libdinput_collector",
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
