# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "dinputconfigdh_fuzzer:fuzztest",
    "dinputinitsink_fuzzer:fuzztest",
    "dinputinitsource_fuzzer:fuzztest",
    "dinputonsessionclosed_fuzzer:fuzztest",
    "dinputonsessionopend_fuzzer:fuzztest",
    "dinputreleasesink_fuzzer:fuzztest",
    "dinputreleasesource_fuzzer:fuzztest",
    "dinputsubscribelocaldh_fuzzer:fuzztest",
    "distributedinputclient_fuzzer:fuzztest",
    "distributedinputkit_fuzzer:fuzztest",
    "distributedinputsinktransport_fuzzer:fuzztest",
    "distributedinputsourcetransport_fuzzer:fuzztest",
    "distributedinputtransportbase_fuzzer:fuzztest",
  ]
}
