# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/input_handler"

group("inputhandlertest") {
  testonly = true

  deps = [ ":distributed_input_handler_test" ]
}

## HandlerTest distributed_input_handler_test {{{
ohos_unittest("distributed_input_handler_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${common_path}/include",
    "${services_state_path}/include",
    "${service_common}/include",
    "${frameworks_path}/include",
    "${utils_path}/include",
    "${distributedinput_path}/inputdevicehandler/include",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "${distributedinput_path}/inputdevicehandler/src/distributed_input_handler.cpp",
    "distributed_input_handler_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [ "${utils_path}:libdinput_utils" ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:distributed_av_sender",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "libevdev:libevdev",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_handler_test }}}
