# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_collector") {
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "include",
    "${common_path}/include",
    "${services_state_path}/include",
    "${frameworks_path}/include",
    "${utils_path}/include",
  ]

  sources = [
    "${common_path}/include/input_hub.cpp",
    "src/distributed_input_collector.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputcollector\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [
    "${services_state_path}:libdinput_sink_state",
    "${utils_path}:libdinput_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:distributed_av_sender",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "libevdev:libevdev",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
