# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

ohos_shared_library("libdinput_sink") {
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true
  include_dirs = [
    "${av_transport_path}/common/include",
    "include",
    "${frameworks_path}/include",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "${common_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${service_common}/include",
    "${services_sink_path}/transport/include",
    "${services_sink_path}/inputcollector/include",
    "//third_party/json/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${distributedinput_path}/services/state/include",
    "${distributedinput_path}/services/transportbase/include",
  ]

  sources = [
    "${common_path}/include/white_list_util.cpp",
    "${ipc_path}/src/distributed_input_sink_stub.cpp",
    "src/distributed_input_sink_event_handler.cpp",
    "src/distributed_input_sink_manager.cpp",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinputmanagerkit\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${distributedinput_path}/services/state:libdinput_state",
    "${distributedinput_path}/services/transportbase:libdinput_trans_base",
    "${innerkits_path}:libdinput_sdk",
    "${services_sink_path}/inputcollector:libdinput_collector",
    "${services_sink_path}/transport:libdinput_sink_trans",
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "eventhandler:libeventhandler",
    "graphic_2d:surface",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libdm",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_input"
}
